// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Proposal Form render correctly 1`] = `
<Fragment>
  <styled.div>
    <styled.div>
      <p>
        Proposal code
      </p>
      <InputField
        data-test="proposal-code-input"
        name="proposalCode"
        onChange={[Function]}
        title="Proposal code, such as 2019-1-SCI-042"
        value=""
      />
    </styled.div>
    <styled.div>
      <p>
        Principal investigator
      </p>
      <InputField
        data-test="principal-investigator-input"
        error=""
        name="principalInvestigator"
        onChange={[Function]}
        title="Principal investigator for the proposal"
        value=""
      />
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      <p>
        Proposal title
      </p>
      <InputField
        data-test="proposal-title-input"
        name="proposalTitle"
        onChange={[Function]}
        title="Proposal title"
        value=""
      />
    </styled.div>
    <styled.div>
      <p>
        Observation night
      </p>
      <InputField
        data-test="observation-night-input"
        name="observationNight"
        onChange={[Function]}
        title="Night of the observation. You can input a date range by separating two dates with \\"...\\" For example: 2019-01-01 .. 2019-02-28"
        value=""
      />
    </styled.div>
  </styled.div>
</Fragment>
`;

exports[`Proposal Form render correctly 2`] = `
<Fragment>
  <styled.div>
    <styled.div>
      <p>
        Proposal code
      </p>
      <InputField
        data-test="proposal-code-input"
        name="proposalCode"
        onChange={[Function]}
        title="Proposal code, such as 2019-1-SCI-042"
        value=""
      />
    </styled.div>
    <styled.div>
      <p>
        Principal investigator
      </p>
      <InputField
        data-test="principal-investigator-input"
        error=""
        name="principalInvestigator"
        onChange={[Function]}
        title="Principal investigator for the proposal"
        value=""
      />
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      <p>
        Proposal title
      </p>
      <InputField
        data-test="proposal-title-input"
        name="proposalTitle"
        onChange={[Function]}
        title="Proposal title"
        value="hello"
      />
    </styled.div>
    <styled.div>
      <p>
        Observation night
      </p>
      <InputField
        data-test="observation-night-input"
        name="observationNight"
        onChange={[Function]}
        title="Night of the observation. You can input a date range by separating two dates with \\"...\\" For example: 2019-01-01 .. 2019-02-28"
        value=""
      />
    </styled.div>
  </styled.div>
</Fragment>
`;

exports[`Proposal Form render correctly 3`] = `
<Fragment>
  <styled.div>
    <styled.div>
      <p>
        Proposal code
      </p>
      <InputField
        data-test="proposal-code-input"
        error="invalid proposal code"
        name="proposalCode"
        onChange={[Function]}
        title="Proposal code, such as 2019-1-SCI-042"
        value="Code1"
      />
    </styled.div>
    <styled.div>
      <p>
        Principal investigator
      </p>
      <InputField
        data-test="principal-investigator-input"
        error="invalid Principal Investigator"
        name="principalInvestigator"
        onChange={[Function]}
        title="Principal investigator for the proposal"
        value=""
      />
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      <p>
        Proposal title
      </p>
      <InputField
        data-test="proposal-title-input"
        error="invalid proposal title"
        name="proposalTitle"
        onChange={[Function]}
        title="Proposal title"
        value=""
      />
    </styled.div>
    <styled.div>
      <p>
        Observation night
      </p>
      <InputField
        data-test="observation-night-input"
        name="observationNight"
        onChange={[Function]}
        title="Night of the observation. You can input a date range by separating two dates with \\"...\\" For example: 2019-01-01 .. 2019-02-28"
        value=""
      />
    </styled.div>
  </styled.div>
</Fragment>
`;
